.provarCaches/00D5f000005vwGkEAI/objects/rstkf__bankcardtt__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_bankcardtt</customHelpPage>
    <description>bankcardtt__c</description>
    <fields>
        <fullName>rstkf__bankcardtt_desc__c</fullName>
        <description>Description</description>
        <inlineHelpText>User-defined description for this Bank Card transaction.This is a user-defined text field limited to 100 characters</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_dfltamount__c</fullName>
        <description>Default Amount</description>
        <inlineHelpText>The total amount of this transaction in Home Currency.</inlineHelpText>
        <label>Default Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_dim1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension 1 Value</description>
        <inlineHelpText>Where dimensions are used, this field is a lookup to the dimension values for Dimension 1.</inlineHelpText>
        <label>Dimension 1 Value</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Bank Card Transaction Templates</relationshipLabel>
        <relationshipName>Bank_Card_Transaction_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_dim2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension 2 Value</description>
        <inlineHelpText>Where dimensions are used, this field is a lookup to the dimension values for Dimension 2.</inlineHelpText>
        <label>Dimension 2 Value</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Bank Card Transaction Templates (Dimension 2 Value)</relationshipLabel>
        <relationshipName>Bank_Card_Transaction_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_dim3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension 3 Value</description>
        <inlineHelpText>Where dimensions are used, this field is a lookup to the dimension values for Dimension 3.</inlineHelpText>
        <label>Dimension 3 Value</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Bank Card Transaction Templates (Dimension 3 Value)</relationshipLabel>
        <relationshipName>Bank_Card_Transaction_Templates2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_glacct2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Expense Account</description>
        <inlineHelpText>This is a lookup to the expense account against which this transaction will be recorded.</inlineHelpText>
        <label>Expense Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Bank Card Transaction Templates (GL Account)</relationshipLabel>
        <relationshipName>Bank_Card_Transaction_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company</description>
        <inlineHelpText>Company to which this Bank Account is associated</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Bank Card Transaction Templates</relationshipLabel>
        <relationshipName>Bank_Card_Transaction_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Division</description>
        <inlineHelpText>The Division that will be impacted by this transaction. This is a lookup to the division master.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Bank Card Transaction Templates</relationshipLabel>
        <relationshipName>Bank_Card_Transaction_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project</description>
        <inlineHelpText>The Division that will be impacted by this transaction. This is a lookup to the project master.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Bank Card Transaction Templates</relationshipLabel>
        <relationshipName>Bank_Card_Transaction_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_odcid__c</fullName>
        <description>ODC Code</description>
        <inlineHelpText>The Other Direct Cost code (if any) associated with the AP invoice.</inlineHelpText>
        <label>ODC Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_payee__c</fullName>
        <inlineHelpText>The name of the Payee that this transaction applies to. This is a user-defined text field limited to 50 characters.</inlineHelpText>
        <label>Payee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtt_templateid__c</fullName>
        <description>Txn Template ID</description>
        <inlineHelpText>Txn Template ID</inlineHelpText>
        <label>Txn Template ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__bankcardtt_glcmp__r.rstkf__externalid__c + rstkf__bankcardtt_templateid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>RIGHT(rstkf__bankcardtt_templateid__c &amp; &quot;(&quot; &amp; rstkf__bankcardtt_desc__c &amp; &quot;)&quot;, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>Trigger Options</description>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Bank Card Transaction Template</label>
    <nameField>
        <label>Bank Card Transaction Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Card Transaction Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>